# rdpsync-android

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  build.gradle.kts  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  freerdp_bridge.c  freerdp_client_stub.c
app/src/main/java/com/rdp/sync/: MainActivity.kt  RdpSyncApplication.kt
app/src/main/java/com/rdp/sync/data/: Device.kt  DeviceDao.kt
app/src/main/java/com/rdp/sync/database/: DeviceDao.kt  DeviceDatabase.kt  RdpSyncDatabase.kt
app/src/main/java/com/rdp/sync/di/: AppModule.kt
app/src/main/java/com/rdp/sync/manager/: SyncManager.kt
app/src/main/java/com/rdp/sync/network/: RdpConnector.kt  RdpInputDispatcher.kt  WebDavSyncService.kt
app/src/main/java/com/rdp/sync/repository/: DeviceRepository.kt
app/src/main/java/com/rdp/sync/ui/: MainActivity.kt
app/src/main/java/com/rdp/sync/ui/navigation/: AppNavigation.kt
app/src/main/java/com/rdp/sync/ui/rdp/: RdpSurfaceView.kt
app/src/main/java/com/rdp/sync/ui/screens/: DeviceDetailScreen.kt  DeviceEditScreen.kt  DeviceListScreen.kt  RdpConnectionScreen.kt
app/src/main/java/com/rdp/sync/ui/theme/: Theme.kt  Type.kt
app/src/main/java/com/rdp/sync/viewmodel/: DeviceViewModel.kt
app/src/main/jni/rdpsync-connector/: Cargo.toml
app/src/main/jni/rdpsync-connector/src/: lib.rs
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
releases/: README-1.0.1.md  README-1.0.2.md  README-1.0.3.md
scripts/: build-apk.sh  build-freerdp-android.sh  build-openssl-android.sh
