[package]
name = "rdpsync-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "rdpsync"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.21"
ironrdp = { path = "/root/projects/ironrdp/crates/ironrdp", features = ["rdpsnd", "rdpdr", "connector", "displaycontrol", "dvc", "session"] }
ironrdp-pdu = { path = "/root/projects/ironrdp/crates/ironrdp-pdu" }
